--- a/official-guide/package.json
+++ b/official-guide/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "serve:prod": "npm run build && serve dist",
-    "build": "webpack-dashboard -- webpack",
+    "build": "webpack --config webpack.config.js",
     "build:dashboard": "webpack-dashboard -- webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
