--- a/official-guide/package.json
+++ b/official-guide/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "serve": "^14.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
     "webpack-dashboard": "^3.3.7"
