--- a/official-guide/package.json
+++ b/official-guide/package.json
@@ -18,7 +18,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
-    "webpack-dashboard": "^3.3.7"
+    "webpack-dashboard": "^3.3.7",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
