--- a/official-guide/package.json
+++ b/official-guide/package.json
@@ -19,7 +19,8 @@
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
     "webpack-dashboard": "^3.3.7",
-    "xml-loader": "^1.2.1"
+    "xml-loader": "^1.2.1",
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.21"
